* Added a new parser methodology that should make implementing scenes quicker and less prune to errors. It uses template literals from ES6 and some helper objects to allow for a simple parser syntax.

Adding roughly 9k words of new content:
* Gwendy has new talk scenes for various topics. The farm description placeholders have been removed.
* Replaced some awkward placeholders for Jeanne, Roa.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.5.2
-------------
* Fixed bug in Abilities (would show if you tried to Heal out of combat, and then pressed "Back").
* Fixed bug in default pregnancy trigger handler.
* Fixed Cassidy's shop being broken.
* Added the ability to set cock size on character creation.
* The pregnancy hastening effects of Gestarium are now applied when using Gestarium+ too.
* Fixed a bug in Lagon's bad end.
* Fixed a bug in fucking Terry with strapon (borrowed).

Version 0.5.1
-------------
* Correctly bundled fonts.
* Fixed a bug in one of Cale's scenes.
* Fixed Fera being bugged.
* Fixed Miranda first date bug.

Version 0.5.0
-------------
* Fixed numerous typos.
* Fixed a few Cavalcade parser errors.
* Changed common measurement unit to imperial (inches, feet, yards) for consistency.
 - Adjusted a bunch of NPC cock sizes to account for this. Holler if you find discrepancies or size evaluations that doesn't make sense!
* Becoming a herm in the intro now starts you with a seven inch cock (bigger than before).
* Added a slew of new cock size adjectives (and reduced their prevalence in scenes). The descriptors should be slightly less repetitive now.
* Added a review/redo option to character creation in the intro.
* Renamed FemmeBoy body type to Trap.
* Added a Voluptuous option for female start.
* Using cheats to get items in the tent now gives 10 of every item instead of 1.